tests/ui/parse/chained_comparison.rx
//@ spec: RXS-0025
fn f() {
    let x = 1 < 2 < 3; //~ ERROR RX0008
}
